tutorial/6-redis-statefulset.yml
---
# a StatefulSet manages Pods that are based on an identical container spec. Unlike a Deployment, a StatefulSet maintains a sticky identity for each of their Pods.
# f you want to use storage volumes to provide persistence for your workload, you can use a StatefulSet as part of the solution
# You can use stateful sets if you need
# - stable, unique network identifiers
# - stable, persistent storage
# - ordered, graceful deployments and scaling
# - ordered automated rolling updates

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis
spec:
  selector:
    matchLabels:
      app: redis            # has to match .spec.template.metadata.labels
  serviceName: "redis"
  replicas: 1               # by default 1
  template:
    metadata:
      labels:
        app: redis          # has to match .spec.selector.matchLabels
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: redis
        image: bitnami/redis:5.0.7
        ports:
        - containerPort: 6379
  volumeClaimTemplates:
  - metadata:
      name: redis
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: "nas-perf"
      resources:
        requests:
          storage: 1Gi
