tutorial/4-ingress-internal.yml
---
# Ingress is an API object that manages external access to the services in a cluster, typically HTTP.
# Ingress exposes HTTP and HTTPS routes from outside the cluster to services within the cluster.
# Traffic routing is controlled by rules defined on the Ingress resource. You can see Ingress as directly connected
# to a Service. Cargo is using NGINX Ingress Controller
# Configures a load balancer or proxy server

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: cargo-demo-ingress                                    # Ingress name
  namespace: cargo-demo
  labels:
    app: cargo-demo
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"    # Advise to redirect all HTTP Traffic to HTTPS
spec:
  rules:
  - host: cargo-demo.cargo-demo.cargo.stxt.media.int          # ! Please adapt this to your settings!
    http:
      paths:
      - path: /                                               #
        backend:                                              # A backend is a combination of Service and port names
          serviceName: cargo-demo                             # Connect to the cargo-demo Service ...
          servicePort: 8088                                   # ... on Port 8088
