tutorial/4-ingress-public.yml
---
# Ingress is an API object that manages external access to the services in a cluster, typically HTTP.
# Ingress exposes HTTP and HTTPS routes from outside the cluster to services within the cluster.
# Traffic routing is controlled by rules defined on the Ingress resource. You can see Ingress as directly connected
# to a Service. Cargo is using NGINX Ingress Controller
# Configures a load balancer or proxy server

# ! Use this file if your cluster has a public ip address. This will configure a let's encrypt certificate for you

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: cargo-demo-ingress                                    # Ingress name
  namespace: cargo-demo
  labels:
    app: cargo-demo
  annotations:
    kubernetes.io/tls-acme: "true"                            # Enables automatic Let's Encrypt for the Ingress
    #nginx.ingress.kubernetes.io/whitelist-source-range: "1.2.3.4/24"
                                                              # Advisable to use a whitelist source range so your service
                                                              # isn't open to the whole internet.
spec:
  tls:                                                        # The tls section defines which certificate is needed
  - hosts:
    - cargo-demo1.cargo-purple.swisstxt.ch
    secretName: cargo-demo1.cargo-purple.swisstxt.ch-letsencrypt # and where it's saved and loaded as a secret
  rules:
  - host: cargo-demo1.cargo-purple.swisstxt.ch                   # ! Please adapt this to your settings!
    http:
      paths:
      - path: /                                               # The path must match the content of an incoming request
        backend:                                              # A backend is a combination of Service and port names
          serviceName: cargo-demo                             # Connect to the cargo-demo Service ...
          servicePort: 8088                                   # ... on Port 8088
